# depthmapX

./: .gitignore  .mailmap  .travis.yml  CMakeLists.txt  README.md  README.txt  defaults.pri  depthmapX.pro  index.html  params.json  version_defs.h.in
GuiUnitTest/: CMakeLists.txt  GuiUnitTest.pro  main.cpp  testsettings.cpp  testviewhelpers.cpp
cliTest/: CMakeLists.txt  argumentholder.h  cliTest.pro  main.cpp  selfcleaningfile.h  testagentparser.cpp  testargumentholder.cpp  testaxialparser.cpp  testcommandlineparser.cpp  testexportparser.cpp  testimportparser.cpp  testisovistparser.cpp  testlinkparser.cpp  testmapconvertparser.cpp  testparsingutils.cpp  testperformancewriter.cpp  testradiusconverter.cpp  testsegmentparser.cpp  testselfcleaningfile.cpp  testsimpletimer.cpp  teststepdepthparser.cpp  testvgaparser.cpp  testvisprepparser.cpp
depthmapX/: 3DView.cpp  3DView.h  AboutDlg.cpp  AboutDlg.h  AgentAnalysisDlg.cpp  AgentAnalysisDlg.h  AttributeChooserDlg.cpp  AttributeChooserDlg.h  AttributeSummary.cpp  AttributeSummary.h  AxialAnalysisOptionsDlg.cpp  AxialAnalysisOptionsDlg.h  CMakeLists.txt  ColourScaleDlg.h  ColumnPropertiesDlg.cpp  ColumnPropertiesDlg.h  ConvertShapesDlg.h  DepthmapOptionsDlg.cpp  DepthmapOptionsDlg.h  EditConnectionsDlg.cpp  EditConnectionsDlg.h  FewestLineOptionsDlg.h  FilePropertiesDlg.h  FindLocDlg.cpp  FindLocDlg.h  GLView.cpp  GLView.h  GraphDoc.cpp  GraphDoc.h  GridDialog.cpp  GridDialog.h  Info.plist  InsertColumnDlg.cpp  InsertColumnDlg.h  IsovistPathDlg.h  LayerChooserDlg.cpp  LayerChooserDlg.h  LicenceDialog.cpp  LicenceDialog.h  MakeLayerDlg.cpp  (+79 more)
depthmapX/CompiledUI/: ui_AboutDlg.h  ui_AgentAnalysisDlg.h  ui_AttributeChooserDlg.h  ui_AttributeSummary.h  ui_AxialAnalysisOptionsDlg.h  ui_ColourScaleDlg.h  ui_ColourScaleDlg.h.bak  ui_ColumnPropertiesDlg.h  ui_ConvertShapesDlg.h  ui_DepthmapAlert.h  ui_DepthmapOptionsDlg.h  ui_EditConnectionsDlg.h  ui_FewestLineOptionsDlg.h  ui_FilePropertiesDlg.h  ui_FindLocDlg.h  ui_GridDialog.h  ui_InsertColumnDlg.h  ui_IsovistPathDlg.h  ui_LayerChooserDlg.h  ui_LicenceDialog.h  ui_MakeLayerDlg.h  ui_MakeOptionsDlg.h  ui_NewLayerDlg.h  ui_OptionsDlg.h  ui_PromptReplace.h  ui_PushDialog.h  ui_RenameObjectDlg.h  ui_SegmentAnalysisDlg.h  ui_TopoMetDlg.h  ui_licenseagreement.h
depthmapX/UI/: AboutDlg.ui  AgentAnalysisDlg.ui  AttributeChooserDlg.ui  AttributeSummary.ui  AxialAnalysisOptionsDlg.ui  ColourScaleDlg.ui  ColourScaleDlg.ui.bak  ColumnPropertiesDlg.ui  ConvertShapesDlg.ui  DepthmapAlert.ui  DepthmapOptionsDlg.ui  EditConnectionsDlg.ui  FewestLineOptionsDlg.ui  FilePropertiesDlg.ui  FindLocDlg.ui  GridDialog.ui  InsertColumnDlg.ui  IsovistPathDlg.ui  LayerChooserDlg.ui  LicenceDialog.ui  MakeLayerDlg.ui  MakeOptionsDlg.ui  NewLayerDlg.ui  OptionsDlg.ui  PromptReplace.ui  PushDialog.ui  RenameObjectDlg.ui  SegmentAnalysisDlg.ui  TopoMetDlg.ui  doAll.sh  licenseagreement.ui
depthmapX/dialogs/: AboutDlg.h  AgentAnalysisDlg.h  AttributeChooserDlg.cpp  AttributeChooserDlg.h  AttributeSummary.cpp  AxialAnalysisOptionsDlg.cpp  CMakeLists.txt  (+29 more)
depthmapXTest/: CMakeLists.txt  depthmapXTest.pro  main.cpp  testgllines.cpp  testgllinesuniform.cpp  testglrastertexture.cpp
depthmapXcli/: CMakeLists.txt  agentparser.cpp  agentparser.h  axialparser.cpp  axialparser.h  commandlineparser.cpp  commandlineparser.h  depthmapXcli.pro  exceptions.h  exportparser.cpp  exportparser.h  imodeparser.h  imodeparserfactory.h  importparser.cpp  importparser.h  isovistparser.cpp  isovistparser.h  linkparser.cpp  linkparser.h  main.cpp  mapconvertparser.cpp  mapconvertparser.h  modeparserregistry.cpp  modeparserregistry.h  parsingutils.cpp  parsingutils.h  performancesink.h  performancewriter.cpp  performancewriter.h  printcommunicator.cpp  printcommunicator.h  radiusconverter.cpp  radiusconverter.h  runmethods.cpp  runmethods.h  segmentparser.cpp  segmentparser.h  simpletimer.h  stepdepthparser.cpp  stepdepthparser.h  (+4 more)
genlibTest/: CMakeLists.txt  convertertest.cpp  dxfptest.cpp  genlibTest.pro  main.cpp  testbspnode.cpp  testcontainerutils.cpp  testpsubvec.cpp  testreadwritehelpers.cpp  testsimplematrix.cpp  teststringutils.cpp  testvectorutils.cpp
mgraph440/: CMakeLists.txt  attr.cpp  attr.h  attributes.cpp  attributes.h  axialmap.cpp  axialmap.h  bspnode.h  comm.h  connector.cpp  connector.h  containerutils.h  datalayer.cpp  datalayer.h  displayparams.h  exceptions.h  fileproperties.h  legacyconverters.h  mapinfodata.h  mgraph.cpp  mgraph.h  mgraph440.pro  mgraph_consts.h  ngraph.cpp  ngraph.h  options.h  p2dpoly.cpp  p2dpoly.h  pafcolor.cpp  pafcolor.h  pafmath.cpp  pafmath.h  paftl.h  pixelbase.cpp  pixelbase.h  pixelref.h  point.cpp  point.h  pointmap.cpp  pointmap.h  (+8 more)
mgraph440Test/: CMakeLists.txt  main.cpp  mgraph440Test.pro  testcontainers.cpp  testconverters.cpp
salaTest/: CMakeLists.txt  salaTest.pro  testattributetable.cpp  testattributetablehelpers.cpp  testattributetableindex.cpp  testattributetableview.cpp  testdxfp.cpp  testentityparsing.cpp  testgeometrygenerators.cpp  testgridproperties.cpp  testisovist.cpp  testisovistdef.cpp  testlayermanager.cpp  testlinkutils.cpp  testmapconversion.cpp  testmapinfodata.cpp  testmgraph.cpp  testpointinpoly.cpp  testpointmap.cpp  testpushvalues.cpp  testsalaprogram.cpp  testshapegraphs.cpp  testshapemaps.cpp  testshaperemove.cpp  testsparksieve.cpp  teststructsizes.cpp  testtextparser.cpp
salalib/: CMakeLists.txt  MapInfoData.cpp  MapInfoData.h  alllinemap.cpp  alllinemap.h  attributes.cpp  attributes.h  attributetable.cpp  attributetable.h  attributetablehelpers.h  attributetableindex.cpp  attributetableindex.h  attributetableview.cpp  attributetableview.h  axialmap.cpp  axialmap.h  axialminimiser.cpp  axialminimiser.h  axialpolygons.cpp  axialpolygons.h  connector.cpp  connector.h  datalayer.cpp  datalayer.h  displayparams.h  entityparsing.cpp  entityparsing.h  fileproperties.h  geometrygenerators.cpp  geometrygenerators.h  gmlmap.cpp  gmlmap.h  gridproperties.cpp  gridproperties.h  iaxial.h  idepthmap.cpp  idepthmap.h  idepthmapx.cpp  idepthmapx.h  importtypedefs.h  (+56 more)
(+301 files in other folders)
